exports[`CSpell Spellcheck > compiles a valid project 1`] = `
{
  "logs": {
    "stdout": [
      [
        "Copied cspell.config.cjs\\n"
      ],
      [
        "> /node_modules/.bin/cspell --config cspell.config.cjs --dot --color --unique --no-progress --cache-strategy content .\\n"
      ],
      [
        "spellcheck finished.\\n"
      ]
    ],
    "stderr": [
      [
        "CSpell: Files checked: 3, Issues found: 0 in 0 files.\\n\\n"
      ]
    ]
  },
  "contentsDiff": {
    "cspell.config.cjs": "const {baseConfig} = require('@virmator/spellcheck/configs/cspell.config.base.cjs');\\n\\nmodule.exports = {\\n    ...baseConfig,\\n    ignorePaths: [\\n        ...baseConfig.ignorePaths,\\n    ],\\n    words: [\\n        ...baseConfig.words,\\n    ],\\n};\\n"
  }
}
`;

exports[`CSpell Spellcheck > rejects an invalid project 1`] = `
{
  "logs": {
    "stdout": [
      [
        "> /node_modules/.bin/cspell --config cspell.config.cjs --dot --color --unique --no-progress --cache-strategy content .\\n"
      ],
      [
        "typo-file.txt:1:1 - Unknown word (fdaslkjfkldsa)\\n\\n"
      ]
    ],
    "stderr": [
      [
        "CSpell: Files checked: 4, Issues found: 1 in 1 file.\\n\\n"
      ],
      [
        "spellcheck failed.\\n"
      ]
    ]
  },
  "error": {
    "name": "VirmatorSilentError"
  }
}
`;

exports[`CSpell Spellcheck > spellchecks only at the current directory 1`] = `
{
  "logs": {
    "stdout": [
      [
        "> /node_modules/.bin/cspell --config ../cspell.config.cjs --dot --color --unique --no-progress --cache-strategy content .\\n"
      ],
      [
        "spellcheck finished.\\n"
      ]
    ],
    "stderr": [
      [
        "CSpell: Files checked: 1, Issues found: 0 in 0 files.\\n\\n"
      ]
    ]
  }
}
`;

exports[`CSpell Spellcheck > uses a custom config 1`] = `
{
  "logs": {
    "stdout": [
      [
        "Copied cspell.config.cjs\\n"
      ],
      [
        "> /node_modules/.bin/cspell --config custom-cspell.config.cjs --dot --color --unique --no-progress --cache-strategy content --config custom-cspell.config.cjs .\\n"
      ],
      [
        "spellcheck finished.\\n"
      ]
    ],
    "stderr": [
      [
        "CSpell: Files checked: 4, Issues found: 0 in 0 files.\\n\\n"
      ]
    ]
  },
  "contentsDiff": {
    "cspell.config.cjs": "const {baseConfig} = require('@virmator/spellcheck/configs/cspell.config.base.cjs');\\n\\nmodule.exports = {\\n    ...baseConfig,\\n    ignorePaths: [\\n        ...baseConfig.ignorePaths,\\n    ],\\n    words: [\\n        ...baseConfig.words,\\n    ],\\n};\\n"
  }
}
`;

exports[`CSpell Spellcheck > uses custom file list 1`] = `
{
  "logs": {
    "stdout": [
      [
        "> /node_modules/.bin/cspell --config cspell.config.cjs --dot --color --unique --no-progress --cache-strategy content nested/file.txt --file nested/file.txt\\n"
      ],
      [
        "spellcheck finished.\\n"
      ]
    ],
    "stderr": [
      [
        "CSpell: Files checked: 1, Issues found: 0 in 0 files.\\n\\n"
      ]
    ]
  }
}
`;
